--- a/src/app/pages/necesidades/necesidades.component.html
+++ b/src/app/pages/necesidades/necesidades.component.html
@@ -94,18 +94,18 @@
   <!-- Titulo -->
   <div class="container title-container">
     <h1>
-      Scope Canvas - Decisión
+      Scope Canvas - Necesidades "Motivadores"
     </h1>
   </div>
   <!-- Instrucciones -->
   <div class="container instructions-container">
-    <app-entender-decision-accordion></app-entender-decision-accordion>
+    <app-entender-necesidades-accordion></app-entender-necesidades-accordion>
   </div>
 
   <!-- Tablero -->
   <div class="container tablero-container">
     <!--<div class="app" *ngFor="let note of notes">
-      <app-note-decision (dismiss)="deleteNote($event)" (focusout)="saveNote($event)" id="{{note.id}}">{{note.content}}</app-note-decision>
+      <app-note-necesidades (dismiss)="deleteNote($event)" (focusout)="saveNote($event)" id="{{note.id}}">{{note.content}}</app-note-necesidades>
     </div>-->
     <ul>
       <li *ngFor="let note of notes" id="{{note.id}}">
