--- a/src/app/pages/necesidades-decision/necesidades-decision.component.scss
+++ b/src/app/pages/necesidades-decision/necesidades-decision.component.scss
@@ -23,6 +23,45 @@
 }
 // VIDEO END
 
+.caja-nota{
+  outline: none;
+  overflow: auto;
+  min-height: 4em;
+  max-height: 4em;
+}
+
+/* Tamaño del scroll */
+::ng-deep .caja-nota::-webkit-scrollbar {
+  width: 8px !important;
+  height: 8px !important;
+}
+
+ /* Estilos barra (thumb) de scroll */
+::ng-deep .caja-nota::-webkit-scrollbar-thumb {
+  background: var(--custom-color) !important;
+  border-radius: 4px;
+}
+
+::ng-deep .caja-nota::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+}
+
+::ng-deep .caja-nota::-webkit-scrollbar-thumb:hover {
+  background: #000 !important;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+ /* Estilos track de scroll */
+::ng-deep .caja-nota::-webkit-scrollbar-track {
+  background: #e1e1e1;
+  border-radius: 4px;
+}
+
+::ng-deep .caja-nota::-webkit-scrollbar-track:hover,
+::ng-deep .caja-nota::-webkit-scrollbar-track:active {
+  background: #d4d4d4;
+}
+
 .tablero-container{
   min-width: 100%;
   min-height: 520px;
