--- a/src/app/pages/propositos/propositos.component.scss
+++ b/src/app/pages/propositos/propositos.component.scss
@@ -22,6 +22,7 @@
   }
 }
 // VIDEO END
+
 .caja-nota{
   outline: none;
   overflow: auto;
@@ -71,7 +72,8 @@
   margin: 0;
 
   .toolbar{
-    position:static !important;
+    /*position:static !important;*/
+    position: absolute !important;
   }
   a{
     svg{
@@ -135,14 +137,19 @@
 
 .toolbar {/*
   left: 0;
-  bottom: 0;*/
-  position: fixed;
-  top: 180px;
-  right: 60px;
-  height:55px;/*
+  bottom: 0;*//*
+  position: fixed;*/
+  position: absolute;
+  //top: 180px;
+  top: 40%;
+  right: 25%;
+  left: 25%;
+  margin: auto;
+  //right: 60px;
+  height:155px;/*
   text-align: center;
   position: fixed;*/
-  width: 100%;
+  width: 200px;
   background: transparent;/*
   background-color: gold;
   border: 10px solid gray;
@@ -153,8 +160,8 @@
 }
 
 .add{
-  float: right;
-  margin-left: auto;
+  /*float: right;*/
+  margin: auto;
   color: #fff;
   /* width: 39px; */
   cursor: pointer;
@@ -206,4 +213,69 @@
       box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
     }
   }
+}
+
+/* Notas en lista */
+.note_toolbar {
+  /*background: #7f6c04;*//*
+  background-color: rgb(255, 240, 70);*/
+  border-radius: 8px 8px 0px 0px;
+}
+
+.close {
+  top: -10px;
+  right: -100px;
+  cursor: pointer;
+  color: black;
+  position: relative;
+}
+
+ul,li{
+  list-style:none;
+}
+ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+ul li{
+  text-decoration:none;
+  color:#000;
+  background:#ffc;
+  display:block;
+  height:10em;
+  width:10em;
+  padding:1em;
+  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+  transform: rotate(-6deg);
+  transition: transform .15s linear;
+}
+
+ul li:nth-child(even){
+  transform:rotate(4deg);
+  position:relative;
+  top:5px;
+  background:#cfc;
+}
+ul li:nth-child(3n){
+  transform:rotate(-3deg);
+  position:relative;
+  top:-5px;
+  background:#ccf;
+}
+ul li:nth-child(5n){
+  transform:rotate(5deg);
+  position:relative;
+  top:-10px;
+}
+
+ul li:hover,ul li:focus{
+  box-shadow:10px 10px 7px rgba(0,0,0,.7);
+  transform: scale(1.25);
+  position:relative;
+  z-index:5;
+}
+
+ul li{
+  margin:1em;
 }
