--- a/src/app/pages/necesidades-dolores-decision/necesidades-dolores-decision.component.scss
+++ b/src/app/pages/necesidades-dolores-decision/necesidades-dolores-decision.component.scss
@@ -69,6 +69,7 @@
   position: relative;
   padding: 20px 20px 40px 20px;
   margin: 0;
+  margin-bottom: 100px;
 
   .toolbar{
     /*position:static !important;*/
