--- a/src/app/pages/necesidades-dolores/necesidades-dolores.component.scss
+++ b/src/app/pages/necesidades-dolores/necesidades-dolores.component.scss
@@ -69,6 +69,7 @@
   position: relative;
   padding: 20px 20px 40px 20px;
   margin: 0;
+  margin-bottom: 100px;
 
   .toolbar{
     /*position:static !important;*/
@@ -134,7 +135,7 @@
   margin-left: 10px;
 }
 
-.toolbar {/*
+.toolbar-notas {/*
   left: 0;
   bottom: 0;*//*
   position: fixed;*/
