--- a/src/app/pages/problema/problema.component.html
+++ b/src/app/pages/problema/problema.component.html
@@ -1,6 +1,6 @@
 <!--begin::Root-->
 <!--<div class="d-flex flex-column flex-root" style="background-color: #070d15 !important;height: 100%;">-->
-<div class="" style="background-color: #070d15 !important;overflow: hidden;height: 100%;">
+<div class="" style="background-color: #070d15 !important;overflow: auto;height: 100%;">
   
   <!-- Seccion Loader-->  
   <app-loadmask [loader]="isLoading" *ngIf="isLoading"></app-loadmask>
@@ -118,7 +118,7 @@
       </li>
     </ul>
     
-    <div class="toolbar" id="toolbar" tabindex="0">
+    <div class="toolbar-notas" style="z-index: auto;">
       <!--<a class="add material-icons" (click)="addNote()" >
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
