--- a/src/app/pages/ventajas/ventajas.component.scss
+++ b/src/app/pages/ventajas/ventajas.component.scss
@@ -70,6 +70,7 @@
   position: relative;
   padding: 20px 20px 40px 20px;
   margin: 0;
+  margin-bottom: 100px;
 
   .toolbar{
     /*position:static !important;*/
@@ -135,7 +136,7 @@
   margin-left: 10px;
 }
 
-.toolbar {/*
+.toolbar-notas {/*
   left: 0;
   bottom: 0;*//*
   position: fixed;*/
