--- a/src/app/pages/propositos-voto/propositos-voto.component.scss
+++ b/src/app/pages/propositos-voto/propositos-voto.component.scss
@@ -97,7 +97,7 @@
   .clasificacion-container {
     width: 100%;
     max-width: 100%;
-    height: 230px;
+    height: 460px;
     margin: 0 25px 25px 0;
     display: grid;/*
     vertical-align: top;*/
@@ -105,11 +105,11 @@
 
   .clasificacion-list {
     border: solid 1px #ccc;
-    min-height: 170px;
+    min-height: 490px;
     background: rgb(204, 202, 202);
     border-radius: 4px;
     overflow: auto;
-    display: flex;
+    display: block;
     padding: 10px;
   }
 
@@ -117,7 +117,7 @@
     padding: 0px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -134,7 +134,7 @@
     box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.75);
     /*margin: auto;*/
     margin-left: 20px;
-    margin-bottom: 0px;
+    margin-bottom: 20px;
   }
 
   .clasificacion-box:nth-child(even) {
