replicacion de estilos de notas

--- a/src/app/pages/preguntas/preguntas.component.html
+++ b/src/app/pages/preguntas/preguntas.component.html
@@ -134,7 +134,7 @@
 
   <!-- Tablero -->
   <div class="container tablero-container">
-    <div class="toolbar" id="toolbar" tabindex="0">
+    <!--<div class="toolbar" id="toolbar" tabindex="0">
       <a class="add material-icons" (click)="addNote()" >
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -143,6 +143,27 @@
     </div>
     <div class="app" *ngFor="let note of notes">
       <app-note-pregunta (dismiss)="deleteNote($event)" (focusout)="saveNote($event)" id="{{note.id}}">{{note.content}}</app-note-pregunta>
+    </div>-->
+    <ul>
+      <li *ngFor="let note of notes" id="{{note.id}}">
+          <div class="note_toolbar">
+            <span class="close material-icons" (click)="deleteNote($event, note.id)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+              </svg></span>
+          </div>
+          <h2 contenteditable class="caja-nota" (blur)="saveNote($event)">{{note.content}}</h2>
+      </li>
+    </ul>
+
+    <div class="toolbar-notas" style="z-index: auto;">
+      <textarea
+      class="form-control form-control-lg form-control-solid"
+      style="height: 100%;"
+      (keyup.enter)="addNote($event)"
+      placeholder="Agregar Nota"
+      name="nota"
+      id="agregar_nota"
+      ></textarea>
     </div>
   </div>
   <!-- Video -->
