correccion estilo mapa de experiencia

--- a/src/app/pages/mapa/mapa.component.html
+++ b/src/app/pages/mapa/mapa.component.html
@@ -85,8 +85,8 @@
   <!-- Tablero -->
   <div class="container tablero-container">
     <div class="draw-flow-poc">
-      <div class="wrapper">
-        <div class="col" style="text-align: center">
+      <div class="wrapper" style="padding-top: 0px !important; padding-left: 0px !important; margin-top: 0px !important;">
+        <div style="text-align: center">
           <ng-container *ngFor="let node of nodes">
             <div
               class="drag-drawflow"
@@ -118,10 +118,7 @@
                 style="width: 30px"
               />
             </div>
-            <hr /> -->
-    
-    
-    
+            <hr /> -->    
           </ng-container>
         </div>
         <div class="col-right">
