--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -93,117 +93,117 @@
     <!--end::Header Section-->
   
   <div class="container principal-container" *ngIf="etapa == 'principal'">
-      <div class="categoria-principal" (click)="entrar('entender')">
+      <div [ngClass]="fase >= 1 ? 'categoria-principal' : 'categoria-inactiva'" (click)="entrar('entender',(fase >= 1))">
         Dia 1
         <label class="label-principal">Entender</label>
       </div>
-      <div class="categoria-principal" (click)="entrar('enfoque')">
+      <div [ngClass]="fase >= 9 ? 'categoria-principal' : 'categoria-inactiva'" (click)="entrar('enfoque',(fase >= 9))">
         Dia 2
         <label class="label-principal">Enfoque solución</label>
       </div>
-      <div class="categoria-principal" (click)="entrar('modelo')">
+      <div [ngClass]="fase >= 23 ? 'categoria-principal' : 'categoria-inactiva'" (click)="entrar('modelo',(fase >= 23))">
         Dia 3
         <label class="label-principal">Modelo de Negocios</label>
       </div>
-      <div class="categoria-principal">
+      <div [ngClass]="fase >= 41 ? 'categoria-principal' : 'categoria-inactiva'">
         Dia 4
         <label class="label-principal">Dia 4</label>
       </div>
-      <div class="categoria-principal">
+      <div [ngClass]="fase >= 41 ? 'categoria-principal' : 'categoria-inactiva'">
         Dia 5
         <label class="label-principal">Dia 5</label>
       </div>
-      <div class="categoria-principal">
+      <div [ngClass]="fase >= 41 ? 'categoria-principal' : 'categoria-inactiva'">
         Dia 6
         <label class="label-principal">Dia 6</label>
       </div>
   </div>
   
   <div class="container principal-container" *ngIf="etapa == 'entender'">
-    <div class="button-principal" (click)="entrar('principal')">
+    <div class="button-principal" (click)="entrar('principal',true)">
       <label class="label-button-principal">Principal</label>
     </div>  
-    <div class="categoria-principal" (click)="ir('/fase1')">
+    <div [ngClass]="fase >= 1 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase1',(fase >= 1))">
         Entender - Paso 1
         <label class="label-principal">Entender al experto</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase4')">
+      <div [ngClass]="fase >= 4 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase4',(fase >= 4))">
         Entender - Paso 2
         <label class="label-principal">Metas a largo plazo</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase6')">
+      <div [ngClass]="fase >= 6 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase6',(fase >= 6))">
         Entender - Paso 3
         <label class="label-principal">Preguntas del Sprint</label>
       </div>
-      <div class="categoria-mapa-principal" (click)="ir('/fase8')">
+      <div [ngClass]="fase >= 8 ? 'categoria-mapa-principal' : 'categoria-mapa-inactiva'" (click)="ir('/fase8',(fase >= 8))">
         Entender - Paso 4
         <label class="label-mapa-principal">Mapa de Experiencia de Usuario</label>
       </div>
   </div>
   
   <div class="container principal-container" *ngIf="etapa == 'enfoque'">
-      <div class="button-principal" (click)="entrar('principal')">
+      <div class="button-principal" (click)="entrar('principal',true)">
         <label class="label-button-principal">Principal</label>
       </div>  
-      <div class="categoria-principal" (click)="ir('/fase9')">
+      <div [ngClass]="fase >= 9 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase9',(fase >= 9))">
         Scope-Canvas - Paso 1
         <label class="label-principal">Necesidades</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase13')">
+      <div [ngClass]="fase >= 13 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase13',(fase >= 13))">
         Scope-Canvas - Paso 2
         <label class="label-principal">Propósito</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase15')">
+      <div [ngClass]="fase >= 15 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase15',(fase >= 15))">
         Scope-Canvas - Paso 3
         <label class="label-principal">Objetivos</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase19')">
+      <div [ngClass]="fase >= 19 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase19',(fase >= 19))">
         Scope-Canvas - Paso 4
         <label class="label-principal">Acciones</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase21')">
+      <div [ngClass]="fase >= 21 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase21',(fase >= 21))">
         Scope-Canvas - Paso 5
         <label class="label-principal">Métricas</label>
       </div>
   </div>
   
   <div class="container principal-container" *ngIf="etapa == 'modelo'">
-      <div class="button-principal" (click)="entrar('principal')">
+      <div class="button-principal" (click)="entrar('principal',true)">
         <label class="label-button-principal">Principal</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase23')">
+      <div [ngClass]="fase >= 23 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase23',(fase >= 23))">
         Lean-Canvas - Paso 1
         <label class="label-principal">Segmento Clientes</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase25')">
+      <div [ngClass]="fase >= 25 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase25',(fase >= 25))">
         Lean-Canvas - Paso 2
         <label class="label-principal">Problema</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase27')">
+      <div [ngClass]="fase >= 27 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase27',(fase >= 27))">
         Lean-Canvas - Paso 3
         <label class="label-principal">Solución</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase29')">
+      <div [ngClass]="fase >= 29 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase29',(fase >= 29))">
         Lean-Canvas - Paso 4
         <label class="label-principal">Métricas Clave</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase31')">
+      <div [ngClass]="fase >= 31 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase31',(fase >= 31))">
         Lean-Canvas - Paso 5
         <label class="label-principal">Propuesta de Valor</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase33')">
+      <div [ngClass]="fase >= 33 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase33',(fase >= 33))">
         Lean-Canvas - Paso 6
         <label class="label-principal">Ventaja Especial</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase35')">
+      <div [ngClass]="fase >= 35 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase35',(fase >= 35))">
         Lean-Canvas - Paso 7
         <label class="label-principal">Canales</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase37')">
+      <div [ngClass]="fase >= 37 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase37',(fase >= 37))">
         Lean-Canvas - Paso 8
         <label class="label-principal">Estructura de Costos</label>
       </div>
-      <div class="categoria-principal" (click)="ir('/fase39')">
+      <div [ngClass]="fase >= 39 ? 'categoria-principal' : 'categoria-inactiva'" (click)="ir('/fase39',(fase >= 39))">
         Lean-Canvas - Paso 9
         <label class="label-principal">Flujo de Ingresos</label>
       </div>
