--- a/src/app/pages/metas-voto/metas-voto.component.html
+++ b/src/app/pages/metas-voto/metas-voto.component.html
@@ -135,12 +135,12 @@
       <div class="absolute inset-0 flex flex-col min-w-0 overflow-y-auto" cdkScrollable #tableroRef>
       <!-- Main -->
         <div class="flex flex-auto p-6 sm:p-10">
-          <div cdkDropListGroup>
+          <!--<div cdkDropListGroup>-->
             <ng-container *ngFor="let t of filteredTablero | async; let i = index;">
               <div class="clasificacion-container">
                 <h2 style="color: #fff;">{{t.title}}</h2>
-                <div class="clasificacion-list" cdkDropList [cdkDropListData]="t.data" (cdkDropListDropped)="drop($event)">
-                  <div class="clasificacion-box" *ngFor="let item of t.data; let j = index;" cdkDrag>{{item.label}}
+                <div class="clasificacion-list"><!--cdkDropList [cdkDropListData]="t.data" (cdkDropListDropped)="drop($event)"-->
+                  <div class="clasificacion-box" *ngFor="let item of t.data; let j = index;" cdkDragBoundary=".clasificacion-container"  [cdkDragData]="item" (cdkDragMoved)="onDragMove($event, i, j)" (cdkDragEnded)="onDragEnded($event, i, j)" [cdkDragFreeDragPosition]="dragPosition[j]" cdkDrag>{{item.label}}
                     <label class="votos">{{item.votos ? item.votos : 0}}</label>
                     <div class="voto-maximo bg-success position-absolute h-8px w-8px rounded-circle" *ngIf="verifyVotoMaximo(i, j)">
                     </div>
@@ -158,7 +158,7 @@
                 </div>
               </div>
             </ng-container>
-          </div>
+          <!--</div>-->
         </div>
       </div>
       <ng-container *ngFor="let eq of equipo; let i = index;">
