--- a/src/app/pages/boards-voto/boards-voto.component.scss
+++ b/src/app/pages/boards-voto/boards-voto.component.scss
@@ -123,9 +123,9 @@
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: rgb(255, 201, 4);
+    //background: rgb(255, 201, 4);
+    background:#ffc;
     font-size: 14px;
-
     width:150px;
     height: 150px;
     cursor: pointer;
@@ -136,14 +136,22 @@
   }
 
   .clasificacion-box:nth-child(even) {
+    background:#cfc;
+  }
+
+  /*.clasificacion-box:nth-child(odd) {
       transform: rotate(0deg);
-      }
+  }*/
 
-  .clasificacion-box:nth-child(odd) {
-
-      transform: rotate(0deg);
-
-      }
+  .clasificacion-box:nth-child(3n){
+    background:#ccf;
+  }
+  .clasificacion-box:nth-child(5n){
+    background:#ffc;
+  }
+  .clasificacion-box:hover,ul li:focus{
+    box-shadow:10px 10px 7px rgba(0,0,0,.7);
+  }
 
   .cdk-drag-preview {
     box-sizing: border-box;
