--- a/src/app/pages/lean/lean.component.html
+++ b/src/app/pages/lean/lean.component.html
@@ -92,44 +92,84 @@
   </div>
     <!--end::Header Section-->
   
-  <div class="container scope-container">
-      <div class="categoria-necesidades">
-        Necesidades
+  <div class="container lean-container">
+      <div class="categoria-problema">
+        Problema
         <ul>
-          <li *ngFor="let nec of necesidades">
-              <h2 class="caja-nota">{{nec.content}}</h2>
-          </li>
-        </ul>
-      </div>
-      <div class="categoria-propositos">
-        Propósito
-        <ul>
-          <li *ngFor="let pro of propositos">
+          <li *ngFor="let pro of problema">
               <h2 class="caja-nota">{{pro.content}}</h2>
           </li>
         </ul>
       </div>
-      <div class="categoria-objetivos">
-        Objetivos
+      <div class="solucion-metricas">
+      <div class="categoria-solucion">
+        Solución
         <ul>
-          <li *ngFor="let obj of objetivos">
-              <h2 class="caja-nota">{{obj.content}}</h2>
-          </li>
-        </ul>
-      </div>
-      <div class="categoria-acciones">
-        Acciones
-        <ul>
-          <li *ngFor="let acc of acciones">
-              <h2 class="caja-nota">{{acc.content}}</h2>
+          <li *ngFor="let sol of solucion">
+              <h2 class="caja-nota">{{sol.content}}</h2>
           </li>
         </ul>
       </div>
       <div class="categoria-metricas">
         Métricas
         <ul>
-          <li *ngFor="let me of metricas">
-              <h2 class="caja-nota">{{me.content}}</h2>
+          <li *ngFor="let met of metricas">
+              <h2 class="caja-nota">{{met.content}}</h2>
+          </li>
+        </ul>
+      </div>
+      </div>
+      <div class="categoria-propuesta">
+        Propuesta
+        <ul>
+          <li *ngFor="let pr of propuesta">
+              <h2 class="caja-nota">{{pr.content}}</h2>
+          </li>
+        </ul>
+      </div>
+      <div class="ventajas-canales">
+      <div class="categoria-ventajas">
+        Ventaja Especial
+        <ul>
+          <li *ngFor="let ve of ventajas">
+              <h2 class="caja-nota">{{ve.content}}</h2>
+          </li>
+        </ul>
+      </div>
+      
+      <div class="categoria-canales">
+        Canales
+        <ul>
+          <li *ngFor="let ca of canales">
+              <h2 class="caja-nota">{{ca.content}}</h2>
+          </li>
+        </ul>
+      </div>
+      </div>
+      
+      <div class="categoria-clientes">
+        Segmento Clientes
+        <ul>
+          <li *ngFor="let cl of clientes">
+              <h2 class="caja-nota">{{cl.content}}</h2>
+          </li>
+        </ul>
+      </div>
+
+      <div class="categoria-estructuras">
+        Estructura de Costos
+        <ul>
+          <li *ngFor="let es of estructuras">
+              <h2 class="caja-nota">{{es.content}}</h2>
+          </li>
+        </ul>
+      </div>
+
+      <div class="categoria-flujos">
+        Flujos de Ingresos
+        <ul>
+          <li *ngFor="let fl of flujos">
+              <h2 class="caja-nota">{{fl.content}}</h2>
           </li>
         </ul>
       </div>
