ajustes revision lunes 19

--- a/src/app/pages/bosquejar-movil/bosquejar-movil.component.html
+++ b/src/app/pages/bosquejar-movil/bosquejar-movil.component.html
@@ -90,7 +90,7 @@
       <div class="categoria-archivo-movil">
         Adjuntar
 
-        <ngx-dropzone (change)="onSelect($event)" accept="image/jpeg,image/jpg,image/png,image/gif">
+        <ngx-dropzone style="margin: 10px 60px;" (change)="onSelect($event)" accept="image/jpeg,image/jpg,image/png,image/gif">
           <ngx-dropzone-label style="z-index: 0 !important;">Seleccione las imagenes o arrastrelas!</ngx-dropzone-label>
           <!--<ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
             <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
@@ -101,7 +101,27 @@
         </ngx-dropzone>
 
         <div style="margin-top: 10px;">
-        <button (click)="enviar()">Enviar</button>
+        <button class="btn btn-success" style="margin-top: 10px;
+        width: 50%;
+        font-size: 20px;
+        margin: auto;
+        align-items: center;
+        align-content: center;
+        position: relative;
+        display: block;
+        " (click)="enviar()">
+        <ng-container *ngIf="isLoading$ | async">
+          <span class="indicator-progress" [style.display]="'block'">
+            Por favor espere...
+            <span
+              class="spinner-border spinner-border-sm align-middle ms-2"
+            ></span>
+          </span>
+        </ng-container>
+        <ng-container *ngIf="!(isLoading$ | async)">
+          <span class="indicator-label">Enviar</span>
+        </ng-container>
+        </button>
         </div>
       </div>
       
