--- a/src/app/pages/lean/lean.component.html
+++ b/src/app/pages/lean/lean.component.html
@@ -97,7 +97,7 @@
         Problema
         <ul>
           <li *ngFor="let pro of problema">
-              <h2 class="caja-nota">{{pro.content}}</h2>
+              <h2 class="texto-nota">{{pro.content}}</h2>
           </li>
         </ul>
       </div>
@@ -106,7 +106,7 @@
         Solución
         <ul>
           <li *ngFor="let sol of solucion">
-              <h2 class="caja-nota">{{sol.content}}</h2>
+              <h2 class="texto-nota">{{sol.content}}</h2>
           </li>
         </ul>
       </div>
@@ -114,7 +114,7 @@
         Métricas
         <ul>
           <li *ngFor="let met of metricas">
-              <h2 class="caja-nota">{{met.content}}</h2>
+              <h2 class="texto-nota">{{met.content}}</h2>
           </li>
         </ul>
       </div>
@@ -123,7 +123,7 @@
         Propuesta
         <ul>
           <li *ngFor="let pr of propuesta">
-              <h2 class="caja-nota">{{pr.content}}</h2>
+              <h2 class="texto-nota">{{pr.content}}</h2>
           </li>
         </ul>
       </div>
@@ -132,7 +132,7 @@
         Ventaja Especial
         <ul>
           <li *ngFor="let ve of ventajas">
-              <h2 class="caja-nota">{{ve.content}}</h2>
+              <h2 class="texto-nota">{{ve.content}}</h2>
           </li>
         </ul>
       </div>
@@ -141,7 +141,7 @@
         Canales
         <ul>
           <li *ngFor="let ca of canales">
-              <h2 class="caja-nota">{{ca.content}}</h2>
+              <h2 class="texto-nota">{{ca.content}}</h2>
           </li>
         </ul>
       </div>
@@ -151,7 +151,7 @@
         Segmento Clientes
         <ul>
           <li *ngFor="let cl of clientes">
-              <h2 class="caja-nota">{{cl.content}}</h2>
+              <h2 class="texto-nota">{{cl.content}}</h2>
           </li>
         </ul>
       </div>
@@ -160,7 +160,7 @@
         Estructura de Costos
         <ul>
           <li *ngFor="let es of estructuras">
-              <h2 class="caja-nota">{{es.content}}</h2>
+              <h2 class="texto-nota">{{es.content}}</h2>
           </li>
         </ul>
       </div>
@@ -169,7 +169,7 @@
         Flujos de Ingresos
         <ul>
           <li *ngFor="let fl of flujos">
-              <h2 class="caja-nota">{{fl.content}}</h2>
+              <h2 class="texto-nota">{{fl.content}}</h2>
           </li>
         </ul>
       </div>
