--- a/src/app/pages/scope/scope.component.html
+++ b/src/app/pages/scope/scope.component.html
@@ -100,7 +100,7 @@
           Dolores
         <ul>
           <li *ngFor="let nec of necesidades_d">
-              <h2 class="caja-nota">{{nec.content}}</h2>
+              <h2 class="texto-nota">{{nec.content}}</h2>
           </li>
         </ul>
         </div>
@@ -108,7 +108,7 @@
         Motivadores
         <ul>
           <li *ngFor="let nec2 of necesidades_m">
-              <h2 class="caja-nota">{{nec2.content}}</h2>
+              <h2 class="texto-nota">{{nec2.content}}</h2>
           </li>
         </ul>
         </div>
@@ -117,7 +117,7 @@
         Propósito
         <ul>
           <li *ngFor="let pro of propositos">
-              <h2 class="caja-nota">{{pro.content}}</h2>
+              <h2 class="texto-nota">{{pro.content}}</h2>
           </li>
         </ul>
       </div>
@@ -127,7 +127,7 @@
         Cortos
         <ul>
           <li *ngFor="let obj of objetivos_c">
-              <h2 class="caja-nota">{{obj.content}}</h2>
+              <h2 class="texto-nota">{{obj.content}}</h2>
           </li>
         </ul>
         
@@ -136,7 +136,7 @@
           Largos
         <ul>
           <li *ngFor="let obj_l of objetivos_l">
-              <h2 class="caja-nota">{{obj_l.content}}</h2>
+              <h2 class="texto-nota">{{obj_l.content}}</h2>
           </li>
         </ul>
       </div>
@@ -145,7 +145,7 @@
         Acciones
         <ul>
           <li *ngFor="let acc of acciones">
-              <h2 class="caja-nota">{{acc.content}}</h2>
+              <h2 class="texto-nota">{{acc.content}}</h2>
           </li>
         </ul>
       </div>
@@ -153,7 +153,7 @@
         Métricas
         <ul>
           <li *ngFor="let me of metricas">
-              <h2 class="caja-nota">{{me.content}}</h2>
+              <h2 class="texto-nota">{{me.content}}</h2>
           </li>
         </ul>
       </div>
