--- a/src/app/pages/bosquejar/bosquejar.component.scss
+++ b/src/app/pages/bosquejar/bosquejar.component.scss
@@ -56,7 +56,7 @@
 }
 
 .categoria-equipo{  
-  width: 450px;
+  width: 25%;
   height: 600px;
   margin: 10px 10px;
   float: left;
@@ -69,7 +69,7 @@
   overflow: scroll;
 }
 .categoria-archivo{  
-  width: 1300px;
+  width: 70%;
   height: 600px;
   margin: 10px 10px;
   float: left;
@@ -94,6 +94,20 @@
   position: relative;
 }
 
+.contenedor-imagen{
+  width: 200px;
+  height: 200px;
+  float: left;
+  margin-left: 10px;
+  margin-top: 10px;
+  position: relative;
+  cursor: auto;
+}
+
+.imagen-usuario{
+  width: 100%;
+  height: 100%;
+}
 
 .button-principal{  
   width: 940px;
@@ -338,7 +352,7 @@
     align-items: center;
     justify-content: center;
     filter: drop-shadow(5px 5px 5px #222222);
-    opacity: .5;
+    //opacity: .5;
   
   }
   
